--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>SelfGrowth | Form Validation Generator</title>
+        <title>Jquery | Form Validation Generator</title>
+        <meta name="description" content="Create customized jQuery validation scripts in seconds! Simplify your form validation process with our intuitive tool, designed for developers of all levels. Enhance user experience and ensure data integrity effortlessly.(By Bijayananda Mohanta)">
         <link rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
